# starter

./: CMakeLists.txt  README.md  starter-config.cmake.in
src/example/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  dbus.cpp  dbus.hpp
src/lib/include/starter/: starter.hpp
